# bcod

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
configs/: environment_config.yaml  main_config.yaml  planner_config.yaml  scheduler_config.yaml  surveyor_orin_nx.yaml
demo/: main.cpp
include/bcod/: belief_rasteriser.hpp  belief_types.hpp  context_encoder.hpp  json_config.hpp  logging.hpp  rasteriser.hpp  sac_scheduler.hpp  sensor_defs.hpp  student_planner.hpp  version.hpp.in
scripts/: install_dependencies.sh
searobotics_surveyor/: .gitignore  README.md  pyproject.toml
searobotics_surveyor/requirements/: requirements.txt  requirements_pi.txt  setup_pi.py
searobotics_surveyor/surveyor_lib/: __init__.py  surveyor.py
searobotics_surveyor/surveyor_lib/clients/: __init__.py  base_client.py  camera_client.py  exo2_client.py  lidar_client.py
searobotics_surveyor/surveyor_lib/docs/: clients.md  helpers.md  servers.md  surveyor.md  tests.md
searobotics_surveyor/surveyor_lib/helpers/: __init__.py  hdf5_logger.py  logger.py  read_save_helper.py  surveyor_messages_helper.py  waypoint_helper.py
searobotics_surveyor/surveyor_lib/servers/: _camera_server.py  camera_server.py  exo2_flask_server.py  exo2_server.py  lidar_server.py
searobotics_surveyor/tests/: MockSurveyor.py  __init__.py  raw_socket.py  send_waypoints.py  test_camera_client.py  test_exo2_client.py  test_hdf5_logger.py  test_lidar_client.py  test_read_and_save_helper.py  test_surveyor_messages_helper.py  test_waypoint_helper.py
src/: belief_rasteriser.cpp  context_encoder.cpp  json_config.cpp  logging.cpp  rasteriser.cpp  sac_scheduler.cpp  student_planner.cpp
tests/: CMakeLists.txt  belief_rasteriser_test.cpp  sac_scheduler_test.cpp  student_planner_test.cpp
tools/: power_profile.cpp  risk_histogram.cpp
